Fix for Mac browser’s scrollbar obscuring content

--- a/client/app/components/dynamic-table/dynamic-table.less
+++ b/client/app/components/dynamic-table/dynamic-table.less
@@ -1,5 +1,7 @@
 .dynamic-table-container {
   overflow-x: auto;
+  padding-bottom: 10px; // workaround for Mac browser's scrollbar obscuring content
+  margin-bottom: -10px; // compensation for above
 
   th {
     white-space: nowrap;
